name:          hs-src-db
version:       0.0.0
cabal-version: >= 1.6
build-type:    Simple
stability:     beta
author:        Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
copyright:     2012 Roel van Dijk <vandijk.roel@gmail.com>
license:       BSD3
license-file:  LICENSE
category:      System
synopsis:      Index interesting information about haskell sources in a database

executable process-source
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base                 >= 4.0     && < 4.6
               , base-unicode-symbols >= 0.2.2.3 && < 0.3
               , Cabal                >= 1.12.0  && < 1.13
               , cmdargs              >= 0.9.2   && < 0.10
               , cpphs                >= 1.13.2  && < 1.14
               , directory            >= 1.1.0.1 && < 1.2
               , filepath             >= 1.2.0.1 && < 1.3
               , haskell-src-exts     >= 1.11.1  && < 1.12
               , strict               >= 0.3.2   && < 0.4
  main-is: Main.hs
  other-modules: Types, ProcessModule
